Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyO+8dTDdZItgjMEfMAWI1yO",
+      "authorship_tag": "ABX9TyNHKRh0f8NjsU9HFz/y1WQ6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,6 +84,73 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# 文字列の切り出し 分割 words\n",
+        "%%writefile temp.ts\n",
+        "const data = `\n",
+        "Cahal... Cahal\n",
+        "\"   \", ' '\n",
+        "'これは\"本\"です\\n\n",
+        "this is a pen. ...\n",
+        "`\n",
+        "\n",
+        "// let splitTest = data.trim().split( /[\\p{C}\\p{Z}]/u);\n",
+        "// let splitTest : string[] = data.trim().split(/[\\n\\s,;.]+/)\n",
+        "/// arr.filter(Boolean)\n",
+        "// let splitTest : string[] = data.trim().split(/[\\n\\s,;.]+/).filter(Boolean)\n",
+        "let splitTest : string[] = data.split(/[\\n\\s\\\"\\',;.]+/).filter(Boolean)\n",
+        "splitTest = Array.from(new Set(splitTest))\n",
+        "\n",
+        "console.log(splitTest)\n"
+      ],
+      "metadata": {
+        "id": "pAPWCy7-Hzcn",
+        "outputId": "35105619-a99c-45b2-baf2-089db40dfe4e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc temp.ts; node temp.js"
+      ],
+      "metadata": {
+        "id": "RROh_2YbIxVK",
+        "outputId": "0d7d7288-ff2c-46f2-aaac-c4d9254ac3c7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[\n",
+            "  \u001b[32m'Cahal'\u001b[39m, \u001b[32m'これは'\u001b[39m,\n",
+            "  \u001b[32m'本'\u001b[39m,    \u001b[32m'です'\u001b[39m,\n",
+            "  \u001b[32m'this'\u001b[39m,  \u001b[32m'is'\u001b[39m,\n",
+            "  \u001b[32m'a'\u001b[39m,     \u001b[32m'pen'\u001b[39m\n",
+            "]\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# オブジェクトの基本\n",
@@ -108,7 +174,7 @@
         "id": "UQYkF7oWl8Ol",
         "outputId": "44a05a9b-9fd5-48e1-fc4a-3d8995466a77"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +197,7 @@
         "id": "J24YWeJlmFKX",
         "outputId": "b8fe0eb1-b5ab-4c2a-e3d2-956ab27ceca8"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,7 +240,7 @@
         "id": "auIjUafruhpX",
         "outputId": "5af4df9e-9b80-4a8f-b010-44d257f511b1"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,7 +263,7 @@
         "id": "dawhyRsAuhlZ",
         "outputId": "61da29a2-2281-48bc-e9d7-e5be17762318"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,7 +325,7 @@
         "id": "P6GiHOKquhiV",
         "outputId": "1b5557ef-3b8d-433c-aca0-2af809129101"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,7 +348,7 @@
         "id": "vmVz3zLyzy_k",
         "outputId": "898210d3-3c25-4588-fbdd-06f3c9bb67ef"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,7 +406,7 @@
         "id": "FnpVgA1qzzht",
         "outputId": "214bd2c0-a2d2-48c6-86b6-481ea6d623b0"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -363,7 +429,7 @@
         "id": "WTyETOcEwPWu",
         "outputId": "a6128061-a910-4aec-d724-1b45ae359816"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -409,7 +475,7 @@
         "id": "plZ1n3GF9mdC",
         "outputId": "b7779b5c-205c-4488-efc6-967fd924d85e"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -432,7 +498,7 @@
         "id": "eitK2nTK9mYw",
         "outputId": "c37084d9-a880-44a6-9b47-1250086e6510"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,7 +539,7 @@
         "id": "_Dc0nGh999Rx",
         "outputId": "d0d750e4-968d-478e-b1f0-5ba0bb152a30"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -531,7 +597,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -554,7 +620,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -596,7 +662,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -619,7 +685,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
