--- a/learnjavascript.ipynb
+++ b/learnjavascript.ipynb
@@ -6,7 +6,7 @@
       "name": "learnjavascript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNCSg5Zr65bgu8fM3dQPz5V",
+      "authorship_tag": "ABX9TyO8SEXCV25fjbWvoiHOgg6I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,38 +28,142 @@
     {
       "cell_type": "code",
       "source": [
-        "%%html\n",
-        "<script>\n",
-        "const person = {\"kk\"};\n",
-        "person\n",
-        "</script>"
+        "# 文字列をソートして文字列に戻す\n",
+        "%%script node\n",
+        "const name = \"ed\"\n",
+        "console.log(name.toUpperCase())\n",
+        "console.log(name.split(\"\").sort().join('').toUpperCase())"
       ],
       "metadata": {
         "id": "MNokmQKYkmrR",
-        "outputId": "ccaa6092-9494-46ca-f74c-56cec6778798",
+        "outputId": "f28ea904-653c-49b8-9492-68504cb69221",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "<script>\n",
-              "const person = {\"kk\"};\n",
-              "person\n",
-              "</script>\n"
-            ]
-          },
-          "metadata": {}
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ED\n",
+            "DE\n"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# JavaScriptでCSVデータ(項目行あり)をJSON形式に変換する\n",
+        "%%script node\n",
+        "const original = `上の句, 下の句\n",
+        "あさぼらけう, あらわれわたる\n",
+        "あきのたの, わがころもでは`\n",
+        "\n",
+        "// const jsonArray = csv2json(original); を作るのが目的\n",
+        "\n",
+        "let lines =  original.split('\\n'); // 1行ごとに分割する\n",
+        "\n",
+        "// console.log(lines) // => [ '上の句, 下の句', 'あさぼらけ, あらわれわたる', 'あきのたの, わがころもでは' ]\n",
+        "\n",
+        "const keynames = lines[0].split(',');\n",
+        "\n",
+        "// console.log(keynames); // => [ '上の句', ' 下の句' ]\n",
+        "\n",
+        "let jsonArray = [];\n",
+        "\n",
+        "for (let i = 1; i < lines.length; i++) {\n",
+        "    let a_line = new Object();\n",
+        "    let csvArrayData = lines[i].split(',');\n",
+        "    // console.log(csvArrayData) [ 'あさぼらけ', ' あらわれわたる' ]\n",
+        "    for (let j = 0; j < keynames.length; j++) {\n",
+        "      a_line[keynames[j]] = csvArrayData[j];\n",
+        "    }\n",
+        "    jsonArray.push(a_line);\n",
+        "}\n",
+        "console.log(jsonArray);"
+      ],
+      "metadata": {
+        "id": "bcgK3OtdAbuw",
+        "outputId": "f2d70446-99c9-4cb7-da3b-1692d94f51fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[\n",
+            "  { '上の句': 'あさぼらけう', ' 下の句': ' あらわれわたる' },\n",
+            "  { '上の句': 'あきのたの', ' 下の句': ' わがころもでは' }\n",
+            "]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# JavaScriptでCSVデータ(項目行あり)をJSON形式に変換する\n",
+        "%%writefile temp.ts\n",
+        "const original = `company_cd,rr_cd,company_name,company_name_k,company_name_h,company_name_r,company_url,company_type,e_status,e_sort\n",
+        "1,11,JR北海道,ジェイアールホッカイドウ,北海道旅客鉄道株式会社,JR北海道,http://www.jrhokkaido.co.jp/,1,0,1\n",
+        "2,11,JR東日本,ジェイアールヒガシニホン,東日本旅客鉄道株式会社,JR東日本,http://www.jreast.co.jp/,1,0,2`\n",
+        "\n",
+        "const jsonArray = csv2json(original);\n",
+        "console.log(jsonArray);\n",
+        "\n",
+        "function loadedEkidata(event){\n",
+        "  event.preventDefault();\n",
+        "  var res = event.target.result;\n",
+        "  var d = res.split('\\n'); // 1行ごとに分割する\n",
+        "  var jsonArray = csv2json(d); // JSON形式に変換\n",
+        "}\n",
+        " \n",
+        "function csv2json(csvArray){\n",
+        "  var jsonArray = [];\n",
+        "     \n",
+        "  // 1行目から「項目名」の配列を生成する\n",
+        "  var items = csvArray[0].split(',');\n",
+        " \n",
+        "  // CSVデータの配列の各行をループ処理する\n",
+        "  //// 配列の先頭要素(行)は項目名のため処理対象外\n",
+        "  //// 配列の最終要素(行)は空のため処理対象外\n",
+        "  for (var i = 1; i < csvArray.length - 1; i++) {\n",
+        "    var a_line = new Object();\n",
+        "    // カンマで区切られた各データに分割する\n",
+        "    var csvArrayD = csvArray[i].split(',');\n",
+        "    //// 各データをループ処理する\n",
+        "    for (var j = 0; j < items.length; j++) {\n",
+        "      // 要素名：items[j]\n",
+        "      // データ：csvArrayD[j]\n",
+        "      a_line[items[j]] = csvArrayD[j];\n",
+        "    }\n",
+        "    jsonArray.push(a_line);\n",
+        "  }\n",
+        "  //console.debug(jsonArray);\n",
+        "  return jsonArray;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "zBgb9yv9Ablf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TNboloC_AK3T"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
