Colaboratory を使用して作成しました

--- a/learnjavascript.ipynb
+++ b/learnjavascript.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "learnjavascript.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyO8SEXCV25fjbWvoiHOgg6I",
+      "authorship_tag": "ABX9TyMRCs7ZEluljucT+M7XHcyM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,6 +54,97 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VDqZsHLZRFkZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# JavaScriptでCSVデータ(項目行あり)をJSON形式に変換する\n",
+        "# csv2json 関数を作る\n",
+        "# id も付けよう\n",
+        "\n",
+        "%%script node\n",
+        "const originalData = `\n",
+        "上の句, 下の句\n",
+        "あさぼらけう \"あらわれわたる\"\n",
+        "あきのたの, わがころもでは\n",
+        "`\n",
+        "\n",
+        "const csv2json = (csvData) => {\n",
+        "    let csvLines = csvData.split('\\n').filter(Boolean); // 行ごとに分割する\n",
+        "    const keyNames = csvLines[0].split(/[\\n\\s\\\"\\',;.]+/); // [ '上の句', ' 下の句' ]\n",
+        "    let jsonArray = []; \n",
+        "    for (let i = 1; i < csvLines.length; i++) { // 0行目は見出しに使ったので1行目から\n",
+        "        let a_line = new Object();\n",
+        "        let csvArrayData = csvLines[i].split(/[\\n\\s\\\"\\',;.]+/); // [ 'あさぼらけ', ' あらわれわたる' ]\n",
+        "        a_line['id'] = i;\n",
+        "        for (let j = 0; j < keyNames.length; j++) {\n",
+        "            a_line[keyNames[j]] = csvArrayData[j];\n",
+        "        }\n",
+        "        jsonArray.push(a_line);\n",
+        "    }\n",
+        "    return jsonArray;\n",
+        "}\n",
+        "\n",
+        "const jsonArray = csv2json(originalData);\n",
+        "console.log(jsonArray);"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "eb588bfc-1771-4a3d-cd1f-c6464dbe4840",
+        "id": "7s3Q8wNARdGd"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[\n",
+            "  { id: 1, '上の句': 'あさぼらけう', '下の句': 'あらわれわたる' },\n",
+            "  { id: 2, '上の句': 'あきのたの', '下の句': 'わがころもでは' }\n",
+            "]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 数値の文字列変換\n",
+        "%%script node\n",
+        "let num = 123;\n",
+        "console.log(typeof(num));\n",
+        "console.log(typeof(String(num))) ;"
+      ],
+      "metadata": {
+        "id": "MtC0bEwSsoYB",
+        "outputId": "4266fcd1-1302-4479-ecdb-e2da97c10e7d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "number\n",
+            "string\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "# JavaScriptでCSVデータ(項目行あり)をJSON形式に変換する\n",
         "%%script node\n",
@@ -86,11 +176,11 @@
         "console.log(jsonArray);"
       ],
       "metadata": {
-        "id": "bcgK3OtdAbuw",
-        "outputId": "f2d70446-99c9-4cb7-da3b-1692d94f51fe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bcgK3OtdAbuw",
+        "outputId": "f2d70446-99c9-4cb7-da3b-1692d94f51fe"
       },
       "execution_count": 30,
       "outputs": [
