Colaboratory を使用して作成しました

--- a/learnjavascript.ipynb
+++ b/learnjavascript.ipynb
@@ -6,7 +6,7 @@
       "name": "learnjavascript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMLmSWX/VS6y++xOcH6mBBR",
+      "authorship_tag": "ABX9TyN1srVer+CjCXSM7IZQKgY/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,6 +40,7 @@
       "source": [
         "# 文字列をソートして文字列に戻す\n",
         "# toUpperCase で name が変わるわけではないので const で定義する\n",
+        "# 関数の多くは変数を変えず immutable 返り値が結果となる\n",
         "%%script node\n",
         "const name = \"ed\"\n",
         "console.log(name.toUpperCase())\n",
@@ -67,12 +68,64 @@
     {
       "cell_type": "code",
       "source": [
-        "# character でも使えるか => char と言うデータ型はない!!!!"
+        "# 関数実験 return は要る。ないと返り値は undefined\n",
+        "%%script node\n",
+        "const func = (x) => {\n",
+        "    return x * 2\n",
+        "}\n",
+        "console.log(func(3))"
+      ],
+      "metadata": {
+        "id": "pWOx9TLRKz-r",
+        "outputId": "9961368e-2bd3-4662-83c1-aea224884c1f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# char と言うデータ型はない!!!!"
       ],
       "metadata": {
         "id": "3S72Ri3DYDNe"
       },
-      "execution_count": 6,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#  ECMAScript 標準では、次の 9 つの型が定義されて\n",
+        "データ型のうち 6 種類はプリミティブであり、 typeof 演算子で確認することができます。\n",
+        "undefined : typeof instance === \"undefined\"\n",
+        "論理型 (Boolean) : typeof instance === \"boolean\"\n",
+        "数値型 (Number) : typeof instance === \"number\"\n",
+        "文字列型 (String) : typeof instance === \"string\"\n",
+        "長整数型 (BigInt) : typeof instance === \"bigint\"\n",
+        "シンボル型 (Symbol) : typeof instance === \"symbol\"\n",
+        "構造型:\n",
+        "オブジェクト (Object) : typeof instance === \"object\" です。データでありませんが、特別な構造型であり、あらゆる構築されたオブジェクトのインスタンスのためのに使用されます。 new Object, new Array, new Map, new Set, new WeakMap, new WeakSet, new Date など、 new キーワードで作られたほぼすべてのものです。\n",
+        "関数 (Function) : データ構造ではありませんが、 typeof 演算子に対して typeof instance === \"function\" を返します。これは単に関数の特別な省略形ですが、すべての関数のコンストラクターは Object コンストラクターから派生しています。\n",
+        "構造的ルートプリミティブ:\n",
+        "null : typeof instance === \"object\" です。特殊なプリミティブ型で、値には別な用途があります。オブジェクトが継承されていない場合、 null が表示されます。\n",
+        "typeof 演算子は、データ型を判定する以外の用途では意味を持たないことに注意してください。"
+      ],
+      "metadata": {
+        "id": "I_fqjstVL5iZ"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
