Colaboratory を使用して作成しました

--- a/learncss.ipynb
+++ b/learncss.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "learncss.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMj491TYFGZSukEKxHs7l9/",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyP6FqOJThuBSR+XZ1VKxsq7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,27 +46,25 @@
         "%%html\n",
         "<style>\n",
         ".box {\n",
-        "    width: 200px;\n",
-        "    height: 200px;\n",
-        "    background: white;\n",
-        "    border: 50px solid red;\n",
-        "    border-radius: 56% 44% 81% 19% / 19% 20% 80% 81%;\n",
-        "    border-left: transparent;\n",
-        "    /* border-right: transparent; */\n",
-        "    border-bottom: transparent;\n",
+        "  border-style: solid; \n",
+        "  width: 0px;\n",
+        "  height: 0px;\n",
+        "  line-height: 0px;\n",
+        "    border-width: 100px 50px 20px 30px;\n",
+        "  border-color: blue white red yellow;\n",
         "}\n",
         "</style>\n",
         "<div class=\"box\"></div>"
       ],
       "metadata": {
-        "id": "2mcVsuUo9Tgb",
-        "outputId": "d224efa7-c149-4f58-e2a4-4ca8bd30d3ac",
+        "id": "V5ygTsGTXiBY",
+        "outputId": "89a91607-e87c-4778-9fe5-7ba82015c5b9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 267
+          "height": 137
         }
       },
-      "execution_count": 13,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -76,14 +75,86 @@
             "text/html": [
               "<style>\n",
               ".box {\n",
-              "    width: 200px;\n",
-              "    height: 200px;\n",
+              "  border-style: solid; \n",
+              "  width: 0px;\n",
+              "  height: 0px;\n",
+              "  line-height: 0px;\n",
+              "    border-width: 100px 50px 20px 30px;\n",
+              "  border-color: blue white red yellow;\n",
+              "}\n",
+              "</style>\n",
+              "<div class=\"box\"></div>\n"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%html\n",
+        "<style>\n",
+        ".box {\n",
+        "    /* width: 200px;\n",
+        "    height: 200px; */\n",
+        "    width: 0;\n",
+        "    height: 0;\n",
+        "    background: white;\n",
+        "    /* border: 50px solid red; */\n",
+        "    /* box-sizing: border-box; */\n",
+        "\n",
+        "    /* border-top: 50px solid black;\n",
+        "    border-left: 50px solid green;\n",
+        "    border-right: 50px solid orange;\n",
+        "    border-bottom:50px solid yellow; */\n",
+        "    border-style: solid; \n",
+        "    border-width: 100px 50px 20px 30px;\n",
+        "    border-color: blue white red yellow;\n",
+        "    /* border-radius: 56% 44% 81% 19% / 19% 20% 80% 81%; */\n",
+        "    border-radius: 5px 50px 50px 30px / 100px 20px 20px 80px;\n",
+        "}\n",
+        "}\n",
+        "</style>\n",
+        "<div class=\"box\"></div>"
+      ],
+      "metadata": {
+        "id": "2mcVsuUo9Tgb",
+        "outputId": "b5b97690-8ba2-40f4-d504-7edff6f8eeb7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 137
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              ".box {\n",
+              "    /* width: 200px;\n",
+              "    height: 200px; */\n",
+              "    width: 0;\n",
+              "    height: 0;\n",
               "    background: white;\n",
-              "    border: 50px solid red;\n",
-              "    border-radius: 56% 44% 81% 19% / 19% 20% 80% 81%;\n",
-              "    border-left: transparent;\n",
-              "    /* border-right: transparent; */\n",
-              "    border-bottom: transparent;\n",
+              "    /* border: 50px solid red; */\n",
+              "    /* box-sizing: border-box; */\n",
+              "\n",
+              "    /* border-top: 50px solid black;\n",
+              "    border-left: 50px solid green;\n",
+              "    border-right: 50px solid orange;\n",
+              "    border-bottom:50px solid yellow; */\n",
+              "    border-style: solid; \n",
+              "    border-width: 100px 50px 20px 30px;\n",
+              "    border-color: blue white red yellow;\n",
+              "    /* border-radius: 56% 44% 81% 19% / 19% 20% 80% 81%; */\n",
+              "    border-radius: 5px 50px 50px 30px / 100px 20px 20px 80px;\n",
+              "}\n",
               "}\n",
               "</style>\n",
               "<div class=\"box\"></div>\n"
