Colaboratory を使用して作成しました

--- a/learnjavascript.ipynb
+++ b/learnjavascript.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "learnjavascript.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyO4CWqiqI0tjmUwPEDSwTdH",
+      "authorship_tag": "ABX9TyOPbUrAoRjF0bz5KPGEw1iV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +38,7 @@
       "cell_type": "code",
       "source": [
         "# 文字列をソートして文字列に戻す\n",
-        "# const で定義する\n",
+        "# 変数はconstで定義する\n",
         "%%script node\n",
         "const name = \"ed\"\n",
         "console.log(name.toUpperCase())\n",
@@ -70,26 +69,25 @@
         "# 配列もconstで定義するが、配列はimmutableではない\n",
         "# push, pop, sort, reverseなどは配列の破壊的メソッドである\n",
         "%%script node\n",
-        "const name = [\"e\",\"d\"]\n",
-        "console.log(name.sort())\n",
-        "console.log(name)\n",
-        "console.log(name.push(\"kkk\")) // 返り値は3\n",
-        "console.log(name)"
+        "const original = [\"e\",\"d\"]\n",
+        "console.log(original.sort()) // この時点でoriginalは変化している\n",
+        "console.log(original)\n",
+        "console.log(original.push(\"kkk\")) // 返り値は3であって、配列ではない\n",
+        "console.log(original)"
       ],
       "metadata": {
-        "id": "1U8HpcOEogtE",
-        "outputId": "809f18bf-4804-4e84-9d67-dcb4b4288314",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1U8HpcOEogtE",
+        "outputId": "6ed51487-c291-42d9-a07e-d53f6e642d3d"
       },
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "DE\n",
             "[ 'd', 'e' ]\n",
             "[ 'd', 'e' ]\n",
             "3\n",
@@ -103,13 +101,35 @@
       "source": [
         "# 安全に使うためにcopyを作る\n",
         "%%script node\n",
-        "const name = []"
+        "const original = [\"e\",\"d\"]\n",
+        "const copy = [...original] // const copy = original としてはいけない\n",
+        "console.log(copy.sort())\n",
+        "console.log(original)\n",
+        "copy.push(\"kkk\")\n",
+        "console.log(copy)\n",
+        "console.log(original)"
       ],
       "metadata": {
-        "id": "0GBvbF_qqGwk"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0GBvbF_qqGwk",
+        "outputId": "9a425686-3b7e-40bc-a6d3-ad1ac927562c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "false\n",
+            "[ 'd', 'e' ]\n",
+            "[ 'e', 'd' ]\n",
+            "[ 'd', 'e', 'kkk' ]\n",
+            "[ 'e', 'd' ]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
