Colaboratory を使用して作成しました

--- a/learnjavascript.ipynb
+++ b/learnjavascript.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "learnjavascript.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOPbUrAoRjF0bz5KPGEw1iV",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNtcMNFug8VO5dO7J63WR7H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -355,104 +356,6 @@
             "  { '上の句': 'あきのたの', ' 下の句': ' わがころもでは' }\n",
             "]\n"
           ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Colab で JavaScript を使うには 3 通りのセルマジックがある\n",
-        "# %%javascript\n",
-        "# %%script node\n",
-        "# %%html"
-      ],
-      "metadata": {
-        "id": "cG6xXZZ1h0LB"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "xRuGEUiZjcj4",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 84
-        },
-        "outputId": "2f1d16be-3bca-4211-b50f-d19647324a5e"
-      },
-      "source": [
-        "%%javascript\n",
-        "document.body.style = \"white-space: pre;\"; // このおまじないで\\nが使えるようになる。\n",
-        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"二行書いたら\\nどうなるか\"));\n",
-        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
-        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"二行目\"));"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/javascript": [
-              "\n",
-              "document.body.style = \"white-space: pre;\"; // このおまじないで\\nが使えるようになる。\n",
-              "\n",
-              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"二行書いたら\\nどうなるか\"));\n",
-              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
-              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"二行目\"));"
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "R3OQSm0rlUDL",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 79
-        },
-        "outputId": "0eb9070a-22b8-4614-a41e-b66f5d2dde04"
-      },
-      "source": [
-        "%%html\n",
-        "タグ無しでも書けるが、\n",
-        "<p>タグで書かれたものが script の対象にできる</p>\n",
-        "どうでしょうか。\n",
-        "<script>\n",
-        "    const para = document.querySelector('p');\n",
-        "    para.textContent = \"ハロー html!!!!\"\n",
-        "</script>"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "タグ無しでも書けるが、\n",
-              "<p>タグで書かれたものが script の対象にできる</p>\n",
-              "どうでしょうか。\n",
-              "<script>\n",
-              "    const para = document.querySelector('p');\n",
-              "    para.textContent = \"ハロー html!!!!\"\n",
-              "</script>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
         }
       ]
     },
