Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -6,7 +6,7 @@
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNGpFlvXwYKYo8LrpCzIwzL",
+      "authorship_tag": "ABX9TyMAUwnOo/wYeaSLpcFnySXh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# typescript をインストールする。5.3.2 が入る。node は 14.16.0 が既に入っている\n",
+        "# typescript をインストールする。5.3.3 が入る。node は 14.16.0 が既に入っている\n",
         "# !npm install --save lodash\n",
         "%%capture\n",
         "!npm install -g typescript\n",
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "cvDmmwL1W8Wl"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -59,18 +59,18 @@
       ],
       "metadata": {
         "id": "tLQ2WzZtpWcw",
-        "outputId": "3fda9c7a-001d-40f5-fe62-b358b3c42bc9",
+        "outputId": "72725289-6e4a-4f2e-8325-2b743520dead",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Version 5.3.2\n"
+            "Version 5.3.3\n"
           ]
         }
       ]
@@ -82,16 +82,16 @@
         "const element = {this: {that: \"hemp\"}, current:\"ok\"};\n",
         "console.log (element.this.that)\n",
         "console.log (element.this?.that)\n",
-        "console.log (element.that?.that)\n"
+        "// console.log (element.that?.that) => property 'that' does not exist on type elmeent\n"
       ],
       "metadata": {
         "id": "3H8bIJa8u1dd",
-        "outputId": "4a42ab09-b327-4faa-b250-082f2510500c",
+        "outputId": "9c9d572e-d897-4019-c2dc-0f2a77267b30",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,28 +109,72 @@
       ],
       "metadata": {
         "id": "uedie6ygu1ZO",
-        "outputId": "d750fe06-38b4-419f-c020-2f4a9435fe60",
+        "outputId": "f3843ecb-8f71-4698-a97a-569c381502c5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[96mtemp.ts\u001b[0m:\u001b[93m4\u001b[0m:\u001b[93m22\u001b[0m - \u001b[91merror\u001b[0m\u001b[90m TS2339: \u001b[0mProperty 'that' does not exist on type '{ this: { that: string; }; current: string; }'.\n",
-            "\n",
-            "\u001b[7m4\u001b[0m console.log (element.that?.that)\n",
-            "\u001b[7m \u001b[0m \u001b[91m                     ~~~~\u001b[0m\n",
-            "\n",
-            "\n",
-            "Found 1 error in temp.ts\u001b[90m:4\u001b[0m\n",
-            "\n",
             "hemp\n",
-            "hemp\n",
-            "\u001b[90mundefined\u001b[39m\n"
+            "hemp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 実験\n",
+        "%%writefile temp.ts\n",
+        "const original = `上の句, 下の句\n",
+        "あさぼらけ, あらわれわたる\n",
+        "あきのたの, わがころもでは`\n",
+        "console.log(original)"
+      ],
+      "metadata": {
+        "id": "rvOQe8-qEdPZ",
+        "outputId": "0e843f53-4612-482e-e68b-b15b272ac34f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc temp.ts; node temp.js"
+      ],
+      "metadata": {
+        "id": "5aFACednElO0",
+        "outputId": "d870170d-f853-4477-c387-b1cf38d685b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "上の句, 下の句\n",
+            "あさぼらけ, あらわれわたる\n",
+            "あきのたの, わがころもでは\n"
           ]
         }
       ]
@@ -153,12 +197,12 @@
       ],
       "metadata": {
         "id": "RBQ-fch14uNe",
-        "outputId": "0ccce85b-119e-403a-935e-1012feb7edc2",
+        "outputId": "309946e9-ce94-461a-b1b1-364a44def2bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,12 +220,12 @@
       ],
       "metadata": {
         "id": "k5PGhCd04ugl",
-        "outputId": "6447e29c-d07e-4772-a83d-bd0b7c949eb2",
+        "outputId": "0508cde6-2084-4a95-c576-2c9a6c3a4076",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -3007,8 +3051,7 @@
         "\n",
         "console.log (weightTest);\n",
         "console.log (heightTest);\n",
-        "console.log (pwdTest);\n",
-        ""
+        "console.log (pwdTest);\n"
       ],
       "metadata": {
         "id": "hp950eaXgA6h",
